--- a/main.html
+++ b/main.html
@@ -42,7 +42,7 @@
       $("#messagebox").on("keydown", function(e){
           if(e.keyCode == 13){
               var d = new Date();
-              firebase.database().ref(getQueryVariable("c")).push({text: $("#messagebox").val(), sender: firebase.auth().currentUser.email, time: d.getHours() + ":" + d.getMinutes()});
+              firebase.database().ref(getQueryVariable("c")).push({text: $("#messagebox").val(), sender: firebase.auth().currentUser.email, time: d.getHours() + ":" + (date.getMinutes()<10?'0':'') + date.getMinutes()});
               $("#messagebox").val("");
           }
       });
